--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url('https://images.pexels.com/photos/3694711/pexels-photo-3694711.jpeg?cs=srgb&dl=pexels-mitchel3uo-3694711.jpg&fm=jpg') no-repeat center center/cover;
+  background-color: rgba(0, 0, 0, 0.85);
+  /* background: url("img/4874e71e61e51f7d5103ad26e47f78b5.jpg") no-repeat center
+    center/cover;
+  opacity: 0.98; */
 }
 
 .overlay {
@@ -56,6 +60,16 @@ body {
   transform: scale(1.08);
 }
 
+.fade-in-delay-1 {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.nickname:hover {
+  color: orange;
+}
 /* 淡入动画 */
 .fade-in {
   opacity: 0;
@@ -63,8 +77,13 @@ body {
   animation: fadeInUp 1s forwards;
 }
 
-.delay-1 { animation-delay: 0.5s; }
-.delay-2 { animation-delay: 1s; }
+.delay-1 {
+  animation-delay: 0.5s;
+}
+.delay-2 {
+  font-family: Arial, Helvetica, sans-serif;
+  animation-delay: 1s;
+}
 
 @keyframes fadeInUp {
   to {
