--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@ header {
   border-bottom: 1px solid #e5e5e5;
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: left;
   padding: 12px 20px;
   position: sticky;
   top: 0;
@@ -82,6 +82,7 @@ header {
   justify-content: flex-start;
   padding: 0;
   margin: 0;
+  /* text-align: left; */
 }
 
 .navbar ul li {
