--- a/main.css
+++ b/main.css
@@ -69,6 +69,34 @@ header {
   margin-right: 10px;
 }
 
+.profile-img {
+  width: 32px;
+  height: 32px;
+  margin-right: 5px; /* 图标和文字的间距 */
+  vertical-align: middle;
+}
+
+.project-img {
+  width: 32px;
+  height: 32px;
+  margin-right: 5px; /* 图标和文字的间距 */
+  vertical-align: middle; /* 和文字垂直居中 */
+}
+
+.blog-img {
+  width: 32px;
+  height: 32px;
+  margin-right: 5px; /* 图标和文字的间距 */
+  vertical-align: middle;
+}
+
+.knowledge-img {
+  width: 32px;
+  height: 32px;
+  margin-right: 5px; /* 图标和文字的间距 */
+  vertical-align: middle;
+}
+
 .nickname {
   font-size: 1rem;
   font-weight: 600;
