--- a/style.css
+++ b/style.css
@@ -45,10 +45,10 @@ body {
 
 .btn {
   display: inline-block;
-  padding: 14px 28px;
+  padding: 5px 14px;
   font-size: 1rem;
+  margin-top: 10px;
   color: #fff;
-  background-color: #000;
   border-radius: 12px;
   text-decoration: none;
   font-weight: 500;
@@ -61,8 +61,8 @@ body {
 }
 
 .fade-in-delay-1 {
-  width: 70px;
-  height: 70px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   margin-right: 10px;
 }
@@ -70,12 +70,13 @@ body {
 .nickname:hover {
   color: orange;
 }
+
 /* 淡入动画 */
-.fade-in {
+/* .fade-in {
   opacity: 0;
   transform: translateY(20px);
   animation: fadeInUp 1s forwards;
-}
+} */
 
 .delay-1 {
   animation-delay: 0.5s;
@@ -90,4 +91,26 @@ body {
     opacity: 1;
     transform: translateY(0);
   }
+}
+
+.code:hover {
+  color: orange;
+}
+
+/* .fade-in:hover {
+  color: orange;
+} */
+
+/* 淡入动画 */
+.code {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUp 1.2s forwards;
+}
+
+/* 淡入动画 */
+.nickname {
+  opacity: 0;
+  transform: translateY(20px);
+  animation: fadeInUp 1.5s forwards;
 }
